# halo2-solidity-verifier

./: Cargo.toml  README.md
src/: test.rs
src/codegen/: evaluator.rs  pcs.rs  util.rs
