[package]
name = "halo2_solidity_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/span14/halo2", branch="ezkl_ecc" }
askama = { version = "0.12.0", features = ["config"], default-features = false }
hex = "0.4.3"
ruint = "1.8.0"
sha3 = "0.10"
itertools = "0.11.0"

# Remove when `vk.transcript_repr()` is ready for usage.
blake2b_simd = "1"

# For feature = "evm"
revm = { version = "3.3.0", optional = true }

[dev-dependencies]
rand = "0.8.5"
revm = "3.3.0"
halo2_maingate  = { git = "https://github.com/span14/halo2wrong", branch = "ezkl", package = "maingate" }

[features]
default = []
evm = ["dep:revm"]
mv-lookup = ["halo2_proofs/mv-lookup", "halo2_maingate/mv-lookup"]

[[example]]
name = "separately"
required-features = ["evm"]